--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,6 +8,7 @@
                 <li><a href="#home">Vlog</a></li>
                 <li><a href="#login" routerLink="/login">Connexion</a></li>
                 <li><a class="btn" routerLink="/">Espace freelance</a></li>
+                <li><a routerLink="/home"><i class="material-icons">account_circle</i></a></li>
             </ul>
         </div>
     </nav>
