--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -128,8 +128,10 @@ a {
     -webkit-text-fill-color: transparent;
 }
 
-.page-scroll-header #menu li a {
-    color: #404969;
+.page-scroll-header i {
+    background: -webkit-linear-gradient(#5ce6e6, #41c5c5);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .page-scroll {
@@ -137,7 +139,7 @@ a {
 }
 
 .btn {
-    background: #404969;
+    background: #606fa3;
     -webkit-border-radius: 8;
     -moz-border-radius: 8;
     border-radius: 3px;
@@ -149,4 +151,14 @@ a {
 .btn:hover {
     background: #52639e;
     text-decoration: none;
+}
+
+i {
+    font-size: 2.5em;
+    font-weight: 900;
+    top: 10px;
+    right: 30px;
+    text-decoration: none;
+    color: white;
+    position: absolute;
 }
